# c_biquad

./: biquad.c  biquad.h
test/: CMakeLists.txt  bq_test.cpp  generate_test_data.py
